MDEV-8492: Windows builds fail on current 10.1

In non-wsrep builds, wsrep_running_threads should be defined to (0).